// Vitest Snapshot v1

exports[`Redeem Yield > should render Redeem Yield Screen 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-bhxxca-MuiTypography-root"
        data-testid="redeemable-balance"
      >
        100
         sOHM
      </h3>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-z28w78-MuiTypography-root"
      >
        Redeemable Yield
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-t0g9ur-MuiGrid-root"
        >
          <button
            class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth custom-root  css-e1do9p-MuiButtonBase-root-MuiButton-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Redeem Yield
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <div
        class="grey-box  MuiBox-root css-h33641"
      >
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            >
              Deposited sOHM
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            style="text-align: right;"
          >
            1,000 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            >
              Redeemable Amount
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            style="text-align: right;"
          >
            100 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            >
              Your Next Rebase
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            style="text-align: right;"
          >
            2.1469 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            >
              Next Rebase Yield
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            style="text-align: right;"
          >
            0.2146%
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            >
              Rebases (5-Day Rate)
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            style="text-align: right;"
          >
            3.2692%
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    />
  </div>
</div>
`;

exports[`Redeem Yield > should show redeemable balance as 100 sOHM 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-bhxxca-MuiTypography-root"
        data-testid="redeemable-balance"
      >
        100
         sOHM
      </h3>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-z28w78-MuiTypography-root"
      >
        Redeemable Yield
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-t0g9ur-MuiGrid-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth custom-root  css-e1do9p-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Redeem Yield
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <div
        class="grey-box  MuiBox-root css-h33641"
      >
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            >
              Deposited sOHM
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            style="text-align: right;"
          >
            1,000 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            >
              Redeemable Amount
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            style="text-align: right;"
          >
            100 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            >
              Your Next Rebase
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            style="text-align: right;"
          >
            2.1469 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            >
              Next Rebase Yield
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            style="text-align: right;"
          >
            0.2146%
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            >
              Rebases (5-Day Rate)
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-fjb5bl-MuiTypography-root"
            style="text-align: right;"
          >
            3.2692%
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    />
  </div>
</div>
`;
